SPKParser.py
# Generated from SPK.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class SPKParser ( Parser ):

    grammarFileName = "SPK.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "<INVALID>", "'LOGICZNA'", "'FUNKCJA'", 
                     "'CA\u0141KOWITA'", "'LISTA'", "'U\u0141AMKOWA'", "'NAPIS'", 
                     "'JE\u017BELI'", "'TO'", "'INACZEJ'", "'DOP\u00D3KI'", 
                     "'DLA'", "'W'", "'WYPISZ'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'!'", 
                     "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", "<INVALID>", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "TYPE_NAME", "BOOL_", "FUN_", 
                      "INT", "LIST", "FLOATING", "STRING_", "IF_", "THEN_", 
                      "ELSE", "WHILE", "FOR", "IN", "PRINT_", "VARIABLE_NAME", 
                      "INTEGER_NUMBER", "FLOAT_NUMBER", "STRING", "NON_ZERO_DIGIT", 
                      "DIGIT", "OR", "AND", "EQ", "NEQ", "GT", "LT", "GTEQ", 
                      "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", "POW", 
                      "NOT", "ASSIGN", "OPAR", "CPAR", "OBRACE", "CBRACE", 
                      "OSQBRACE", "CSQBRACE", "COMMENT", "SEP", "WS", "OTHER" ]

    RULE_program = 0
    RULE_bigStmt = 1
    RULE_if_stat = 2
    RULE_while_stat = 3
    RULE_for_loop = 4
    RULE_print_ = 5
    RULE_printable = 6
    RULE_condition_block = 7
    RULE_block = 8
    RULE_function_ = 9
    RULE_function_exec = 10
    RULE_arguments = 11
    RULE_arguments_exec = 12
    RULE_declaration = 13
    RULE_assignment = 14
    RULE_expr = 15
    RULE_atom = 16
    RULE_iterable = 17

    ruleNames =  [ "program", "bigStmt", "if_stat", "while_stat", "for_loop", 
                   "print_", "printable", "condition_block", "block", "function_", 
                   "function_exec", "arguments", "arguments_exec", "declaration", 
                   "assignment", "expr", "atom", "iterable" ]

    EOF = Token.EOF
    T__0=1
    TYPE_NAME=2
    BOOL_=3
    FUN_=4
    INT=5
    LIST=6
    FLOATING=7
    STRING_=8
    IF_=9
    THEN_=10
    ELSE=11
    WHILE=12
    FOR=13
    IN=14
    PRINT_=15
    VARIABLE_NAME=16
    INTEGER_NUMBER=17
    FLOAT_NUMBER=18
    STRING=19
    NON_ZERO_DIGIT=20
    DIGIT=21
    OR=22
    AND=23
    EQ=24
    NEQ=25
    GT=26
    LT=27
    GTEQ=28
    LTEQ=29
    PLUS=30
    MINUS=31
    MULT=32
    DIV=33
    MOD=34
    POW=35
    NOT=36
    ASSIGN=37
    OPAR=38
    CPAR=39
    OBRACE=40
    CBRACE=41
    OSQBRACE=42
    CSQBRACE=43
    COMMENT=44
    SEP=45
    WS=46
    OTHER=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SPKParser.EOF, 0)

        def function_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.Function_Context)
            else:
                return self.getTypedRuleContext(SPKParser.Function_Context,i)


        def bigStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.BigStmtContext)
            else:
                return self.getTypedRuleContext(SPKParser.BigStmtContext,i)


        def getRuleIndex(self):
            return SPKParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SPKParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SPKParser.FUN_:
                self.state = 36
                self.function_()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPKParser.TYPE_NAME) | (1 << SPKParser.IF_) | (1 << SPKParser.WHILE) | (1 << SPKParser.FOR) | (1 << SPKParser.PRINT_) | (1 << SPKParser.VARIABLE_NAME))) != 0):
                self.state = 42
                self.bigStmt()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(SPKParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BigStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stat(self):
            return self.getTypedRuleContext(SPKParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(SPKParser.While_statContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(SPKParser.For_loopContext,0)


        def declaration(self):
            return self.getTypedRuleContext(SPKParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(SPKParser.AssignmentContext,0)


        def print_(self):
            return self.getTypedRuleContext(SPKParser.Print_Context,0)


        def function_exec(self):
            return self.getTypedRuleContext(SPKParser.Function_execContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_bigStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBigStmt" ):
                listener.enterBigStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBigStmt" ):
                listener.exitBigStmt(self)




    def bigStmt(self):

        localctx = SPKParser.BigStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bigStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 50
                self.if_stat()
                pass

            elif la_ == 2:
                self.state = 51
                self.while_stat()
                pass

            elif la_ == 3:
                self.state = 52
                self.for_loop()
                pass

            elif la_ == 4:
                self.state = 53
                self.declaration()
                pass

            elif la_ == 5:
                self.state = 54
                self.assignment()
                pass

            elif la_ == 6:
                self.state = 55
                self.print_()
                pass

            elif la_ == 7:
                self.state = 56
                self.function_exec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF_(self, i:int=None):
            if i is None:
                return self.getTokens(SPKParser.IF_)
            else:
                return self.getToken(SPKParser.IF_, i)

        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(SPKParser.Condition_blockContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(SPKParser.ELSE)
            else:
                return self.getToken(SPKParser.ELSE, i)

        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_if_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stat" ):
                listener.enterIf_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stat" ):
                listener.exitIf_stat(self)




    def if_stat(self):

        localctx = SPKParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_if_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(SPKParser.IF_)
            self.state = 60
            self.condition_block()
            self.state = 66
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 61
                    self.match(SPKParser.ELSE)
                    self.state = 62
                    self.match(SPKParser.IF_)
                    self.state = 63
                    self.condition_block() 
                self.state = 68
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 69
                self.match(SPKParser.ELSE)
                self.state = 70
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SPKParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(SPKParser.ExprContext,0)


        def THEN_(self):
            return self.getToken(SPKParser.THEN_, 0)

        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_while_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stat" ):
                listener.enterWhile_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stat" ):
                listener.exitWhile_stat(self)




    def while_stat(self):

        localctx = SPKParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(SPKParser.WHILE)
            self.state = 74
            self.expr(0)
            self.state = 75
            self.match(SPKParser.THEN_)
            self.state = 76
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(SPKParser.FOR, 0)

        def VARIABLE_NAME(self):
            return self.getToken(SPKParser.VARIABLE_NAME, 0)

        def IN(self):
            return self.getToken(SPKParser.IN, 0)

        def iterable(self):
            return self.getTypedRuleContext(SPKParser.IterableContext,0)


        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)




    def for_loop(self):

        localctx = SPKParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_for_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(SPKParser.FOR)
            self.state = 79
            self.match(SPKParser.VARIABLE_NAME)
            self.state = 80
            self.match(SPKParser.IN)
            self.state = 81
            self.iterable()
            self.state = 82
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT_(self):
            return self.getToken(SPKParser.PRINT_, 0)

        def printable(self):
            return self.getTypedRuleContext(SPKParser.PrintableContext,0)


        def SEP(self):
            return self.getToken(SPKParser.SEP, 0)

        def getRuleIndex(self):
            return SPKParser.RULE_print_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_" ):
                listener.enterPrint_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_" ):
                listener.exitPrint_(self)




    def print_(self):

        localctx = SPKParser.Print_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_print_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(SPKParser.PRINT_)
            self.state = 85
            self.printable()
            self.state = 86
            self.match(SPKParser.SEP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SPKParser.STRING, 0)

        def VARIABLE_NAME(self):
            return self.getToken(SPKParser.VARIABLE_NAME, 0)

        def INTEGER_NUMBER(self):
            return self.getToken(SPKParser.INTEGER_NUMBER, 0)

        def FLOAT_NUMBER(self):
            return self.getToken(SPKParser.FLOAT_NUMBER, 0)

        def BOOL_(self):
            return self.getToken(SPKParser.BOOL_, 0)

        def getRuleIndex(self):
            return SPKParser.RULE_printable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintable" ):
                listener.enterPrintable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintable" ):
                listener.exitPrintable(self)




    def printable(self):

        localctx = SPKParser.PrintableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_printable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPKParser.BOOL_) | (1 << SPKParser.VARIABLE_NAME) | (1 << SPKParser.INTEGER_NUMBER) | (1 << SPKParser.FLOAT_NUMBER) | (1 << SPKParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SPKParser.ExprContext,0)


        def THEN_(self):
            return self.getToken(SPKParser.THEN_, 0)

        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_condition_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_block" ):
                listener.enterCondition_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_block" ):
                listener.exitCondition_block(self)




    def condition_block(self):

        localctx = SPKParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condition_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.expr(0)
            self.state = 91
            self.match(SPKParser.THEN_)
            self.state = 92
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBRACE(self):
            return self.getToken(SPKParser.OBRACE, 0)

        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def CBRACE(self):
            return self.getToken(SPKParser.CBRACE, 0)

        def bigStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.BigStmtContext)
            else:
                return self.getTypedRuleContext(SPKParser.BigStmtContext,i)


        def getRuleIndex(self):
            return SPKParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = SPKParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(SPKParser.OBRACE)
                self.state = 95
                self.block()
                self.state = 96
                self.match(SPKParser.CBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(SPKParser.OBRACE)
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 99
                    self.bigStmt()
                    self.state = 102 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPKParser.TYPE_NAME) | (1 << SPKParser.IF_) | (1 << SPKParser.WHILE) | (1 << SPKParser.FOR) | (1 << SPKParser.PRINT_) | (1 << SPKParser.VARIABLE_NAME))) != 0)):
                        break

                self.state = 104
                self.match(SPKParser.CBRACE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.bigStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN_(self):
            return self.getToken(SPKParser.FUN_, 0)

        def VARIABLE_NAME(self):
            return self.getToken(SPKParser.VARIABLE_NAME, 0)

        def OPAR(self):
            return self.getToken(SPKParser.OPAR, 0)

        def arguments(self):
            return self.getTypedRuleContext(SPKParser.ArgumentsContext,0)


        def CPAR(self):
            return self.getToken(SPKParser.CPAR, 0)

        def OBRACE(self):
            return self.getToken(SPKParser.OBRACE, 0)

        def CBRACE(self):
            return self.getToken(SPKParser.CBRACE, 0)

        def bigStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.BigStmtContext)
            else:
                return self.getTypedRuleContext(SPKParser.BigStmtContext,i)


        def getRuleIndex(self):
            return SPKParser.RULE_function_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_" ):
                listener.enterFunction_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_" ):
                listener.exitFunction_(self)




    def function_(self):

        localctx = SPKParser.Function_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(SPKParser.FUN_)
            self.state = 110
            self.match(SPKParser.VARIABLE_NAME)
            self.state = 111
            self.match(SPKParser.OPAR)
            self.state = 112
            self.arguments()
            self.state = 113
            self.match(SPKParser.CPAR)
            self.state = 114
            self.match(SPKParser.OBRACE)
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.bigStmt()
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPKParser.TYPE_NAME) | (1 << SPKParser.IF_) | (1 << SPKParser.WHILE) | (1 << SPKParser.FOR) | (1 << SPKParser.PRINT_) | (1 << SPKParser.VARIABLE_NAME))) != 0)):
                    break

            self.state = 120
            self.match(SPKParser.CBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_execContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_NAME(self):
            return self.getToken(SPKParser.VARIABLE_NAME, 0)

        def OPAR(self):
            return self.getToken(SPKParser.OPAR, 0)

        def arguments_exec(self):
            return self.getTypedRuleContext(SPKParser.Arguments_execContext,0)


        def CPAR(self):
            return self.getToken(SPKParser.CPAR, 0)

        def SEP(self):
            return self.getToken(SPKParser.SEP, 0)

        def getRuleIndex(self):
            return SPKParser.RULE_function_exec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_exec" ):
                listener.enterFunction_exec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_exec" ):
                listener.exitFunction_exec(self)




    def function_exec(self):

        localctx = SPKParser.Function_execContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_exec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(SPKParser.VARIABLE_NAME)
            self.state = 123
            self.match(SPKParser.OPAR)
            self.state = 124
            self.arguments_exec()
            self.state = 125
            self.match(SPKParser.CPAR)
            self.state = 126
            self.match(SPKParser.SEP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SPKParser.TYPE_NAME)
            else:
                return self.getToken(SPKParser.TYPE_NAME, i)

        def VARIABLE_NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SPKParser.VARIABLE_NAME)
            else:
                return self.getToken(SPKParser.VARIABLE_NAME, i)

        def getRuleIndex(self):
            return SPKParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)




    def arguments(self):

        localctx = SPKParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arguments)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 128
                    self.match(SPKParser.TYPE_NAME)
                    self.state = 129
                    self.match(SPKParser.VARIABLE_NAME)
                    self.state = 130
                    self.match(SPKParser.T__0) 
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 136
            self.match(SPKParser.TYPE_NAME)
            self.state = 137
            self.match(SPKParser.VARIABLE_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arguments_execContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.ExprContext)
            else:
                return self.getTypedRuleContext(SPKParser.ExprContext,i)


        def getRuleIndex(self):
            return SPKParser.RULE_arguments_exec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments_exec" ):
                listener.enterArguments_exec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments_exec" ):
                listener.exitArguments_exec(self)




    def arguments_exec(self):

        localctx = SPKParser.Arguments_execContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arguments_exec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 139
                    self.expr(0)
                    self.state = 140
                    self.match(SPKParser.T__0) 
                self.state = 146
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 147
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_NAME(self):
            return self.getToken(SPKParser.TYPE_NAME, 0)

        def VARIABLE_NAME(self):
            return self.getToken(SPKParser.VARIABLE_NAME, 0)

        def ASSIGN(self):
            return self.getToken(SPKParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(SPKParser.ExprContext,0)


        def SEP(self):
            return self.getToken(SPKParser.SEP, 0)

        def getRuleIndex(self):
            return SPKParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = SPKParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(SPKParser.TYPE_NAME)
            self.state = 150
            self.match(SPKParser.VARIABLE_NAME)
            self.state = 151
            self.match(SPKParser.ASSIGN)
            self.state = 152
